# klorb

./: .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  CLAUDE.md  LICENSE.txt  Makefile  README.md  TODO.md  env.template
.claude/: settings.json
klorb/: .flake8  Makefile  README.md  dev-requirements.txt  pyproject.toml  release-requirements.txt  usage.md
klorb/evals/: __init__.py  cases.py  colors.py  harness.py  report.py  run_evals.py
klorb/src/klorb/: __init__.py  api_provider.py  cli.py  diagnostics.py  json_error_display.py  klorb_init.py  logging_config.py  message.py  openrouter.py  paths.py  process_config.py  role.py  sandbox.py  schema_envelope.py  session.py  session_naming.py  session_statistics.py  system_prompt.py  system_prompts.py  token_estimate.py  tool_call_log.py  watchdog.py  xml_util.py
klorb/src/klorb/models/: __init__.py  claude_sonnet_5.py  configured_model.py  glm_5_2.py  gpt_4o_mini.py  gpt_5_nano.py  laguna_m1.py  model.py  openrouter_pricing.py  registry.py
klorb/src/klorb/permissions/: __init__.py  command_access.py  command_grant.py  directory_access.py  domain_access.py  domain_grant.py  file_access.py  grant.py  resource.py  risk_classifier.py  rule_grant_base.py  shell_parse.py  skill_access.py  skill_grant.py  table.py  workspace.py
klorb/src/klorb/resources/: __init__.py  default-config.json  greetings.json  template-config.json
klorb/src/klorb/server/: __init__.py  acp_server.py  jsonl_server.py  klorb_agent.py  turn_bridge.py
klorb/src/klorb/session/: __init__.py  config.py  constants.py  events.py
klorb/src/klorb/tools/: __init__.py  _path_safety.py  bash.py  create_file.py  edit_file.py  exceptions.py  find_file.py  grep.py  interruptible_tool.py  line_range_edit.py  list_dir.py  read_file.py  registry.py  replace_all.py  response_envelope.py  scratchpad_common.py  scratchpad_read.py  scratchpad_search.py  scratchpad_write.py  setup_context.py  tool.py  util.py
klorb/src/klorb/tui/: __init__.py  _base.py  app.py  ask_user_questions_panel.py  ask_user_questions_screen.py  confirm_screen.py  constants.py  entrypoint.py  escalate_privileges_panel.py  formatting.py  init_commands.py  model_commands.py  model_info_commands.py  palette.py  permission_ask_panel.py  permission_ask_screen.py  repl.py  session_commands.py  shell.py  theme_commands.py  thinking_commands.py  trust_commands.py
klorb/src/klorb/workspace/: __init__.py  input_history.py  last_session.py  trust_manager.py  workspace_init.py
klorb/tests/: conftest.py  test_ask_user_questions_repl.py  test_ask_user_questions_screen.py  test_bash.py  test_chainlink_common.py  test_claude_sonnet_5_model.py  test_cli.py  test_command_access.py  test_command_grant.py  test_configured_model.py  test_context_files.py  test_create_file.py  test_create_file_core.py  test_create_memory.py  test_delete_memory.py  test_dir_walk.py  test_edit_file.py  test_edit_memory.py  test_edit_scratchpad.py  test_escalate_privileges.py  test_escalate_privileges_repl.py  test_find_file.py  test_forget_memory.py  test_glm_5_2_model.py  test_gpt_4o_mini_model.py  test_gpt_5_nano_model.py  test_grep.py  test_init_commands.py  test_input_history.py  test_klorb_init.py  test_laguna_m1_model.py  test_last_session.py  test_list_dir.py  test_logging_config.py  test_model_commands.py  test_model_info_commands.py  test_model_registry.py  test_openrouter.py  test_openrouter_pricing.py  test_palette.py  (+48 more)
klorb/tests/fixtures/: __init__.py
klorb/tests/fixtures/sample_models/: __init__.py  alpha_model.py  beta_model.py  delta.json  gamma_model.py
klorb/tests/fixtures/sample_tools/: __init__.py  add_tool.py  ask_multi_permission_tool.py  ask_permission_tool.py  echo_tool.py
klorb/tests/klorb/: test_api_provider.py  test_cli.py  test_diagnostics.py  test_logging_config.py  test_process_config.py  test_role.py  test_session_naming.py  test_system_prompt.py  test_watchdog.py  test_xml_util.py
klorb/tests/klorb/models/: test_configured_model.py  test_model.py  test_registry.py
klorb/tests/klorb/permissions/: test_command_access.py  test_command_grant.py  test_domain_access.py  test_file_access.py  test_permissions.py  test_resource.py  test_risk_classifier.py  test_shell_parse.py  test_skill_grant.py
klorb/tests/klorb/server/: acp_harness.py  test_acp_server_core.py  test_jsonl_server.py
klorb/tests/klorb/session/: test_session.py
klorb/tests/klorb/tools/: test_bash.py  test_create_file.py  test_edit_file.py  test_list_dir.py  test_read_file.py  test_response_envelope.py
klorb/tests/klorb/tui/: conftest.py  test_entrypoint.py  test_escalate_privileges_integration.py  test_formatting.py
klorb/tests/tui/: conftest.py  test_app.py  test_ask_user_questions_integration.py  test_escalate_privileges_integration.py  test_formatting.py
(+409 files in other folders)
