# (c) Copyright 2026 Aaron Kimball

[build-system]
  requires = ["setuptools>=82.0.1"]
  build-backend = "setuptools.build_meta"

[project]
  name = "klorb"
  description = "Your friendly neighborhood agent"
  readme = "README.md"
  license = "BSD-3-Clause"
  version = "1.0.0" # Not really used by our system.
  authors = [{ name = "Aaron Kimball", email = "akimball83@gmail.com" }]
  maintainers = [{ name = "Aaron Kimball", email = "akimball83@gmail.com" }]
  requires-python = ">= 3.12"
  dependencies = [
    # Primary library requirements:
    "python-dotenv >= 1.0.0, < 2.0.0",
    "openai >= 2.0.0, < 3.0.0",
    "pydantic >= 2.0.0, < 3.0.0",
    "textual >= 8.0.0, < 9.0.0",
    "coolname >= 2.0.0, < 6.0.0",
    "tiktoken >= 0.13.0, < 1.0.0",
    # Pinned exact, not an open-ended constraint: shfmt-py's own package version doesn't map
    # 1:1 to the shfmt version it bundles, so a routine upgrade could silently change the
    # bundled shfmt version and trip klorb.permissions.shell_parse's AST-shape assumptions with
    # no corresponding code change to blame. See
    # docs/plans/ready/004-bash-permissions-and-bash-tool.md.
    "shfmt-py == 4.0.0",
  ]

[project.scripts]
  klorb = "klorb.cli:main"

[project.optional-dependencies]
  # Development environment-specific dependencies.
  dev = [
    "pip>=26.1.2",
    "uv>=0.11.25",
    "flake8>=6.0.0,<8.0.0",
    "flake8-isort >= 6.0.0, < 8.0.0",
    "flake8-noqa >= 1.3.1, < 2.0.0",
    "flake8-plugin-utils >= 1.3.2, < 2.0.0",
    "flake8-pytest-style>=1.7.2,<3.0.0",
    "isort >= 5.13.0, < 9.0.0",
    "mypy>=2.0.0,<3.0.0",
    "packaging>=26.2",
    "pep8-naming >= 0.13.3, < 2.0.0",
    "pycodestyle >= 2.10.0, < 3.0.0",
    "pyflakes >= 3.0.1, < 4.0.0",
    "pytest>=9.1.1,<10.0.0",
    "pytest-asyncio>=1.4.0,<2.0.0",
  ]

[tool.setuptools.package-data]
  # Ship the built-in system prompt files inside the wheel so
  # klorb.system_prompts.resolve_prompt_file() can read them via importlib.resources at
  # runtime. See docs/specs/roles-and-system-prompts.md.
  #
  # Ship default-config.json (klorb.process_config's built-in-defaults config layer, merged
  # on every process start) and template-config.json (klorb.klorb_init's spartan starter
  # file, copied to disk by `klorb init`) the same way, so both are read via
  # importlib.resources at runtime. See docs/specs/process-and-session-config.md and
  # docs/specs/klorb-init.md.
  #
  # tiktoken-cache/*/* ships the bundled tiktoken BPE cache (klorb.token_estimate) that
  # `klorb init` copies to $KLORB_DATA_DIR, one subdirectory per tiktoken encoding name
  # (today, only o200k_base).
  "klorb.resources" = [
    "system_prompts.d/*.md", "system_prompts.d/roles/*/*.md", "default-config.json", "template-config.json",
    "tiktoken-cache/*/*",
  ]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
]

[tool.isort]
# Mirrors this repo's existing import style: one `from`/`import` block per module, wrapped in
# parens with a hanging indent (and trailing comma) once it would exceed the same line length
# flake8 enforces (see .flake8's max-line-length) rather than one-name-per-line or grid-wrapped.
line_length = 110
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
known_first_party = ["klorb"]
